--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.1.2",
+    "dayjs": "^1.11.5",
     "eslint": "8.22.0",
+    "i18next": "^21.10.0",
+    "immer": "^9.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
