--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.5",
     "eslint": "8.22.0",
     "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.8",
     "immer": "^9.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "i18n": "npx i18next-scanner"
   },
   "eslintConfig": {
     "extends": [
