--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/react-hooks": "^8.0.1",
+    "@types/lodash": "^4.14.186",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "babel-jest": "^29.1.2",
     "eslint-config-prettier": "^8.5.0",
