--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.2",
     "dayjs": "^1.11.5",
     "eslint": "8.22.0",
+    "history": "^5.3.0",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
     "immer": "^9.0.15",
