--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject",
     "i18n": "npx i18next-scanner"
   },
@@ -65,7 +65,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@types/lodash": "^4.14.186",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "babel-jest": "^29.1.2",
+    "babel-jest": "^29.2.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
