--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/lodash": "^4.14.186",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "babel-jest": "^29.2.1",
+    "cypress": "^10.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
